--- a/doctor.html
+++ b/doctor.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Main Stylesheet (Ensure path is correct) -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Favicon (Optional) -->
     <!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
@@ -338,6 +338,6 @@
     </div>
 
     <!-- Link to JavaScript (Defer loading, Ensure path is correct) -->
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
