--- a/patient.html
+++ b/patient.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Link to CSS (Ensure this path is correct) -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Link to Chart.js (Required for Graphs) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -351,6 +351,6 @@
     </div>
 
     <!-- Link to JavaScript (Defer loading, Ensure path is correct) -->
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
