--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Main Stylesheet (Ensure path is correct) -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Favicon (Optional) -->
-    <!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="login-page">
 
@@ -142,6 +139,6 @@
     </div>
 
     <!-- Link to JavaScript (Defer loading, Ensure path is correct) -->
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
